change section title and make it common

--- a/compare.html
+++ b/compare.html
@@ -534,19 +534,21 @@
                             </svg>
                         </div>
                     </div>
-                    <h5 class="font-black compare-item-title">
-                        <span>HUSQVARNA</span>
-                        FC 350 2022
+                    <h5 class="font-black title compare-item-title">
+                        HUSQVARNA
+                        <span>FC 350 2022</span>
                     </h5>
                     <div class="compare-item-img-content">
                         <img class="img-cover" src="assets/images/sections/compare-section/compare-img-01.png" alt="compare-item-img">
                     </div>
-                    <div class="font-22 font-black compare-item-price-apr-wrapper">
-                        PRICE <span>£8,749.00</span> 3% APR
+                    <div class="font-22 font-black title compare-item-price-apr-wrapper">
+                        PRICE
+                        <span>£8,749.00</span>
+                        3% APR
                     </div>
                     <div class="compare-item-border"></div>
-                    <div class="font-22 font-black compare-item-specifics-tag">
-                        <span>BIKE</span> SPECIFICS
+                    <div class="font-22 font-black title compare-item-specifics-tag">
+                        BIKE <span>SPECIFICS</span>
                     </div>
                     <ul class="compare-specifics-list-wrapper">
                         <li class="compare-specifics-list-item">
@@ -609,19 +611,21 @@
                             </svg>
                         </div>
                     </div>
-                    <h5 class="font-black compare-item-title">
-                        <span>KAWASAKI</span>
-                        KX450
+                    <h5 class="font-black title compare-item-title">
+                        KAWASAKI
+                        <span>KX450</span>
                     </h5>
                     <div class="compare-item-img-content">
                         <img class="img-cover" src="assets/images/sections/compare-section/compare-img-02.png" alt="compare-item-img">
                     </div>
-                    <div class="font-22 font-black compare-item-price-apr-wrapper">
-                        PRICE <span>£7,249.00</span> 7% APR
+                    <div class="font-22 font-black title compare-item-price-apr-wrapper">
+                        PRICE
+                        <span>£7,249.00</span>
+                        7% APR
                     </div>
                     <div class="compare-item-border"></div>
-                    <div class="font-22 font-black compare-item-specifics-tag">
-                        <span>BIKE</span> SPECIFICS
+                    <div class="font-22 font-black title compare-item-specifics-tag">
+                        BIKE <span>SPECIFICS</span>
                     </div>
                     <ul class="compare-specifics-list-wrapper">
                         <li class="compare-specifics-list-item">
