--- a/home.html
+++ b/home.html
@@ -513,9 +513,9 @@
         <div class="container">
             <div class="hero-main-wrapper">
                 <div class="hero-content-wrapper">
-                    <h1 class="font-white hero-title">
-                        EUROPE'S LARGEST
-                        <span class="font-white">OFF ROAD CENTRE</span>
+                    <h1 class="font-white title hero-title">
+                        <span class="font-primary">EUROPE'S LARGEST</span>
+                        OFF ROAD CENTRE
                     </h1>
                     <p class="font-white hero-dec">
                         Welcome to Marsh MX, Europe's largest off road bike centre, providing you with a first class, friendly service for all your off-road biking needs!
@@ -560,8 +560,9 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-01.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="featured-content-title">HUSQVARNA</h4>
-                                    <h4 class="featured-content-caption">FC 350 2022</h4>
+                                    <h4 class="title">HUSQVARNA
+                                        <span class="display-block">FC 350 2022</span>
+                                    </h4>
                                     <h4 class="featured-content-price">RRP: £8,749.00</h4>
                                 </div>
                             </div>
@@ -572,8 +573,9 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-02.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="featured-content-title">HONDA</h4>
-                                    <h4 class="featured-content-caption">CRF250R 2022</h4>
+                                    <h4 class="title">HONDA
+                                        <span class="display-block">CRF250R 2022</span>
+                                    </h4>
                                     <h4 class="featured-content-price">RRP: £8,049.00</h4>
                                 </div>
                             </div>
@@ -584,8 +586,9 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-01.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="featured-content-title">HUSQVARNA</h4>
-                                    <h4 class="featured-content-caption">FC 350 2022</h4>
+                                    <h4 class="title">HUSQVARNA
+                                        <span class="display-block">FC 350 2022</span>
+                                    </h4>
                                     <h4 class="featured-content-price">RRP: £8,749.00</h4>
                                 </div>
                             </div>
@@ -596,8 +599,9 @@
                                     <img class="img-cover" src="assets/images/sections/featured-section/featured-img-02.png" alt="featured-img">
                                 </div>
                                 <div class="featured-slider-content">
-                                    <h4 class="featured-content-title">HONDA</h4>
-                                    <h4 class="featured-content-caption">CRF250R 2022</h4>
+                                    <h4 class="title featured-content-title">HONDA
+                                        <span class="display-block">CRF250R 2022</span>
+                                    </h4>
                                     <h4 class="featured-content-price">RRP: £8,049.00</h4>
                                 </div>
                             </div>
@@ -656,9 +660,9 @@
                     <img class="img-cover two-column-img" src="assets/images/sections/two-column-section/two-column-img-01.png" alt="two-column-img">
                 </div>
                 <div class="two-column-content">
-                    <h2 class="font-40 font-black two-column-title">
+                    <h2 class="font-40 font-black title">
                         A HOME FOR
-                        <span>CHAMPIONS</span>
+                        <span class="display-block">CHAMPIONS</span>
                     </h2>
                     <p class="font-18 two-column-description">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
@@ -674,7 +678,7 @@
     <!----- Cta banner section ----->
     <section class="cta-banner-section home-cta-banner">
         <div class="cta-banner-wrapper">
-            <img class="img-cover cta-banner-img" src="assets/images/sections/cta-banner-section/cta-banner-img-01.png" alt="cta-banner-img">
+            <img class="img-cover cta-banner-img" src="assets/images/sections/cta-section/cta-img-01.png" alt="cta-banner-img">
             <div class="text-center cta-banner-content">
                 <h2 class="font-40 font-white cta-banner-title">PARTS FINDER</h2>
                 <a class="btn primary-btn" href="javascript:void(0);">
@@ -687,7 +691,8 @@
     <!----- Shop by brand section ----->
     <section class="shop-by-brand">
         <div class="container">
-            <h2 class="font-40 font-black shop-brand-title">SHOP BY
+            <h2 class="font-40 font-black title shop-brand-title">
+                SHOP BY
                 <span>BRAND</span>
             </h2>
         </div>
@@ -747,9 +752,9 @@
                     <img class="img-cover two-column-img" src="assets/images/sections/two-column-section/two-column-img-02.png" alt="two-column-img">
                 </div>
                 <div class="two-column-content">
-                    <h2 class="font-40 font-black two-column-title">
+                    <h2 class="font-40 font-black title">
                         FINANCE YOUR
-                        <span>DREAM BIKE</span>
+                        <span class="display-block">DREAM BIKE</span>
                     </h2>
                     <p class="font-18 two-column-description">
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
@@ -813,7 +818,7 @@
 
     <!----- Cta blog section ----->
     <section class="cta-blog-section">
-        <img class="img-cover" src="assets/images/sections/cta-blog-section/cta-blog-img-01.png" alt="cta-blog-img">
+        <img class="img-cover" src="assets/images/sections/cta-section/cta-img-02.png" alt="cta-blog-img">
         <div class="cta-blog-wrapper">
             <h2 class="font-white text-center cta-blog-title">
                 NOT WHAT YOU'RE LOOKING FOR?
