--- a/productCategory.html
+++ b/productCategory.html
@@ -772,48 +772,54 @@
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-01.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">HUSQVARNA</h6>
-                                <h6 class="font-15 font-black product-card-caption">FC 350 2022</h6>
+                                <h6 class="font-15 font-black title">HUSQVARNA
+                                    <span class="display-block">FC 350 2022</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-02.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">KAWASAKI</h6>
-                                <h6 class="font-15 font-black product-card-caption">KX 85-II 2022</h6>
+                                <h6 class="font-15 font-black title">KAWASAKI
+                                    <span class="display-block">KX 85-II 2022</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-02.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">HONDA</h6>
-                                <h6 class="font-15 font-black product-card-caption">CRF250R</h6>
+                                <h6 class="font-15 font-black title">HONDA
+                                    <span class="display-block">CRF250R</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-03.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">HONDA</h6>
-                                <h6 class="font-15 font-black product-card-caption">CRF250R</h6>
+                                <h6 class="font-15 font-black title">HONDA
+                                    <span class="display-block">CRF250R</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-01.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">HUSQVARNA</h6>
-                                <h6 class="font-15 font-black product-card-caption">FC 350 2022</h6>
+                                <h6 class="font-15 font-black title">HUSQVARNA
+                                    <span class="display-block">FC 350 2022</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-02.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">KAWASAKI</h6>
-                                <h6 class="font-15 font-black product-card-caption">KX 85-II 2022</h6>
+                                <h6 class="font-15 font-black title">KAWASAKI
+                                    <span class="display-block">KX 85-II 2022</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
@@ -840,24 +846,27 @@
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-02.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">HONDA</h6>
-                                <h6 class="font-15 font-black product-card-caption">CRF250R</h6>
+                                <h6 class="font-15 font-black title">KAWASAKI
+                                    <span class="display-block">KX 85-II 2022</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-03.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">HONDA</h6>
-                                <h6 class="font-15 font-black product-card-caption">CRF250R</h6>
+                                <h6 class="font-15 font-black title">HONDA
+                                    <span class="display-block">CRF250R</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
                         <div class="product-card">
                             <img class="img-cover product-card-img" src="assets/images/sections/product-category-section/product-category-img-01.png" alt="product-category-img">
                             <div class="product-card-contents">
-                                <h6 class="font-15 font-black product-card-title">HUSQVARNA</h6>
-                                <h6 class="font-15 font-black product-card-caption">FC 350 2022</h6>
+                                <h6 class="font-15 font-black title">HUSQVARNA
+                                    <span class="display-block">FC 350 2022</span>
+                                </h6>
                                 <span class="font-18 product-card-price">RRP: £8,749.00</span>
                             </div>
                         </div>
@@ -873,7 +882,7 @@
     <!----- Explore more section ----->
     <section class="overflow-hidden explore-more-section category-explore-more">
         <div class="container">
-            <h2 class="text-uppercase font-white text-center">EXPLORE BIKES</h2>
+            <h2 class="text-uppercase font-white text-center">YOU MAY ALSO BE INTERESTED IN</h2>
             <div class="explore-slider splide" role="group" aria-label="Splide Basic HTML Example">
                 <div class="explore-track splide__track">
                     <ul class="explore-list splide__list">
