created promotional cta section

--- a/productOpen.html
+++ b/productOpen.html
@@ -1175,12 +1175,24 @@
         <div class="container">
             <div class="promotional-cta-wrapper">
                 <div class="promotional-cta-card">
-                    <div class="promotional-cta-img-content">
-                        <img class="img-cover" src="assets/images/sections/cta-section/cta-img-03.png" alt="cta-img">
-                    </div>
+                    <img class="img-cover" src="assets/images/sections/cta-section/cta-img-03.png" alt="cta-img">
                     <div class="promotional-cta-dialog">
                         <div class="font-white promotional-cta-content">
                             <h5 class="title promotional-cta-title"> FINANCE <span>AVAILABLE</span></h5>
+                            <p class="truncate line-clamp-2 promotional-cta-description">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+                            </p>
+                            <a class="btn primary-btn" href="javascript:void(0);">
+                                <span>LEARN MORE</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="promotional-cta-card">
+                    <img class="img-cover" src="assets/images/sections/cta-section/cta-img-04.png" alt="cta-img">
+                    <div class="promotional-cta-dialog">
+                        <div class="font-white promotional-cta-content">
+                            <h5 class="title promotional-cta-title"> VALUE <span>MY BIKE</span></h5>
                             <p class="truncate line-clamp-2 promotional-cta-description">
                                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
                             </p>
