created testimonial section

--- a/compare.html
+++ b/compare.html
@@ -536,7 +536,7 @@
                     </div>
                     <h5 class="font-black title compare-item-title">
                         HUSQVARNA
-                        <span>FC 350 2022</span>
+                        <span class="display-block">FC 350 2022</span>
                     </h5>
                     <div class="compare-item-img-content">
                         <img class="img-cover" src="assets/images/sections/compare-section/compare-img-01.png" alt="compare-item-img">
@@ -613,7 +613,7 @@
                     </div>
                     <h5 class="font-black title compare-item-title">
                         KAWASAKI
-                        <span>KX450</span>
+                        <span class="display-block">KX450</span>
                     </h5>
                     <div class="compare-item-img-content">
                         <img class="img-cover" src="assets/images/sections/compare-section/compare-img-02.png" alt="compare-item-img">
