--- a/productOpen.html
+++ b/productOpen.html
@@ -1206,6 +1206,84 @@
         </div>
     </section>
 
+    <!----- Testimonial V2 section ----->
+    <section class="bg-black testimonial-v2-section">
+        <div class="container">
+            <div class="mx-auto testimonial-v2-slider splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="testimonial-v2-track splide__track">
+                    <ul class="testimonial-v2-list splide__list">
+                        <li class="testimonial-v2-slide splide__slide">
+                            <div class="text-center mx-auto font-white testimonial-v2-item">
+                                <div class="testimonial-v2-author">
+                                    <div class="mx-auto testimonial-v2-avatar">
+                                        <img src="assets/images/sections/testimonial-section/testimonial-author-img.png" alt="author-img">
+                                    </div>
+                                    <span class="font-14 testimonial-v2-author-name">CAL CRUTCHLOW</span>
+                                    <a class="font-14 display-block font-white testimonial-v2-author-account" href="javascript:void(0);">
+                                        @CALCRUTCHLOW
+                                    </a>
+                                </div>
+                                <div class="h3 testimonial-v2-content">
+                                    THIS HUSQVARNA MODEL IS LIKE NO OTHER. STUNNING BIKE, SOUND, FEEL, KIT AND PERFORMANCE. TRULY FAST AND IGNITES ADRENALINE.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="testimonial-v2-slide splide__slide">
+                            <div class="text-center mx-auto font-white testimonial-v2-item">
+                                <div class="testimonial-v2-author">
+                                    <div class="mx-auto testimonial-v2-avatar">
+                                        <img src="assets/images/sections/testimonial-section/testimonial-author-img.png" alt="author-img">
+                                    </div>
+                                    <span class="font-14 testimonial-v2-author-name">CAL CRUTCHLOW</span>
+                                    <a class="font-14 display-block font-white testimonial-v2-author-account" href="javascript:void(0);">
+                                        @CALCRUTCHLOW
+                                    </a>
+                                </div>
+                                <div class="h3 testimonial-v2-content">
+                                    THIS HUSQVARNA MODEL IS LIKE NO OTHER. STUNNING BIKE, SOUND, FEEL, KIT AND PERFORMANCE. TRULY FAST AND IGNITES ADRENALINE.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="testimonial-v2-slide splide__slide">
+                            <div class="text-center mx-auto font-white testimonial-v2-item">
+                                <div class="testimonial-v2-author">
+                                    <div class="mx-auto testimonial-v2-avatar">
+                                        <img src="assets/images/sections/testimonial-section/testimonial-author-img.png" alt="author-img">
+                                    </div>
+                                    <span class="font-14 testimonial-v2-author-name">CAL CRUTCHLOW</span>
+                                    <a class="font-14 display-block font-white testimonial-v2-author-account" href="javascript:void(0);">
+                                        @CALCRUTCHLOW
+                                    </a>
+                                </div>
+                                <div class="h3 testimonial-v2-content">
+                                    THIS HUSQVARNA MODEL IS LIKE NO OTHER. STUNNING BIKE, SOUND, FEEL, KIT AND PERFORMANCE. TRULY FAST AND IGNITES ADRENALINE.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="testimonial-v2-slide splide__slide">
+                            <div class="text-center mx-auto font-white testimonial-v2-item">
+                                <div class="testimonial-v2-author">
+                                    <div class="mx-auto testimonial-v2-avatar">
+                                        <img src="assets/images/sections/testimonial-section/testimonial-author-img.png" alt="author-img">
+                                    </div>
+                                    <span class="font-14 testimonial-v2-author-name">CAL CRUTCHLOW</span>
+                                    <a class="font-14 display-block font-white testimonial-v2-author-account" href="javascript:void(0);">
+                                        @CALCRUTCHLOW
+                                    </a>
+                                </div>
+                                <div class="h3 testimonial-v2-content">
+                                    THIS HUSQVARNA MODEL IS LIKE NO OTHER. STUNNING BIKE, SOUND, FEEL, KIT AND PERFORMANCE. TRULY FAST AND IGNITES ADRENALINE.
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+
     <!----- Footer ----->
     <footer class="overflow-hidden">
         <div class="container">
