created two column section in product open page

--- a/productOpen.html
+++ b/productOpen.html
@@ -1121,7 +1121,7 @@
     <section class="features-card-section">
         <div class="container">
             <h2 class="h4 font-black title features-card-title">
-                KEY<span>FEATURES</span>
+                KEY <span>FEATURES</span>
             </h2>
             <div class="features-cards-wrapper">
                 <div class="features-card-content">
@@ -1282,7 +1282,30 @@
         </div>
     </section>
 
-    
+    <!----- Two column section ----->
+    <section class="overflow-hidden product-open-column-section">
+        <div class="container">
+            <div class="two-column-wrapper">
+                <div class="two-column-img-content">
+                    <img class="img-cover two-column-img" src="assets/images/sections/two-column-section/two-column-img-03.png" alt="two-column-img">
+                </div>
+                <div class="two-column-content">
+                    <span class="font-14 text-uppercase display-block product-open-column-caption">WHY NOT CHECKOUT OUR</span>
+                    <h2 class="font-40 font-black title">
+                        KAWASAKI
+                        <span class="display-block">KX450</span>
+                    </h2>
+                    <p class="font-18 two-column-description">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                    </p>
+                    <a class="btn primary-btn" href="javascript:void(0);">
+                        <span>VIEW PRODUCT</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
