update js and start frequently bought section

--- a/productOpen.html
+++ b/productOpen.html
@@ -1306,6 +1306,17 @@
         </div>
     </section>
 
+    <!----- Frequently bought section ----->
+    <section class="frequently-bought-section">
+        <div class="container">
+            <h2 class="frequently-bought-title">FREQUENTLY BOUGHT WITH…</h2>
+            <div class="">
+                <div class="">
+
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
