comment frequently bought section

--- a/productOpen.html
+++ b/productOpen.html
@@ -1307,16 +1307,16 @@
     </section>
 
     <!----- Frequently bought section ----->
-    <section class="frequently-bought-section">
+    <!-- <section class="frequently-bought-section">
         <div class="container">
             <h2 class="frequently-bought-title">FREQUENTLY BOUGHT WITH…</h2>
-            <div class="">
-                <div class="">
+            <div class="frequently-bought-wrapper">
+                <div class="frequently-bought-">
 
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
