--- a/productOpen.html
+++ b/productOpen.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>marsh-mx</title>
+    <!----- Favicon ----->
+    <link rel="icon" href="assets/images/icons/favicon.png" type="image/png">
 
     <!----- Fancybox css ----->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
@@ -1309,10 +1311,21 @@
     <!----- Frequently bought section ----->
     <!-- <section class="frequently-bought-section">
         <div class="container">
-            <h2 class="frequently-bought-title">FREQUENTLY BOUGHT WITH…</h2>
-            <div class="frequently-bought-wrapper">
-                <div class="frequently-bought-">
+            <h2 class="text-center frequently-bought-title">FREQUENTLY BOUGHT WITH…</h2>
+            <div class="frequently-bought-slider splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="frequently-bought-track splide__track">
+                    <ul class="frequently-bought-list splide__list">
+                        <li class="frequently-bought-slide splide__slide">
+                            <div class="frequently-bought-item">
+                                <div class="frequently-bought-img-content">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="frequently-bought-content">
 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
