--- a/compare.html
+++ b/compare.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>marsh-mx</title>
+    <!----- Favicon ----->
+    <link rel="icon" href="assets/images/icons/favicon.png" type="image/png">
 
     <!----- Splide css ----->
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
