uncomment frequently bought section

--- a/productOpen.html
+++ b/productOpen.html
@@ -1309,7 +1309,7 @@
     </section>
 
     <!----- Frequently bought section ----->
-    <!-- <section class="frequently-bought-section">
+    <section class="frequently-bought-section">
         <div class="container">
             <h2 class="text-center frequently-bought-title">FREQUENTLY BOUGHT WITH…</h2>
             <div class="frequently-bought-slider splide" role="group" aria-label="Splide Basic HTML Example">
@@ -1329,7 +1329,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!----- Footer ----->
     <footer class="overflow-hidden">
